# hamster

./: README.md  pyproject.toml
extract_git_details/: extract_git_info.py
generate_repo_analysis/: generate_repo_analysis.py
scripts/: check_completion.py  evosuite_parallel_runner.py  evosuite_runner.py  generate_model.py  generate_model_using_ray.py  generate_statistics.py  output_model_schema.py
src/hamster/: cli.py
src/hamster/code_analysis/common/: common_analysis.py  reachability.py
src/hamster/code_analysis/focal_class_method/: focal_class_method.py
src/hamster/code_analysis/model/: models.py
src/hamster/code_analysis/test_statistics/: call_and_assertion_sequence_details_info.py  input_analysis.py  project_analysis_info.py  setup_analysis_info.py  teardown_analysis_info.py  test_class_analysis_info.py  test_method_analysis_info.py
src/hamster/code_analysis/utils/: constants.py
src/hamster/extract_statistics/: utils.py
src/hamster/extract_statistics/alter_hamster_model/: alter_hamster_model.py  alter_statistics.py  model_comparator.py  model_scanner.py
src/hamster/extract_statistics/assertion_details/: assertion_details.py
src/hamster/extract_statistics/overall_characteristics/: overall_characteristics.py
src/hamster/extract_statistics/test_input/: test_input.py  test_input_v2.py
src/hamster/extract_statistics/test_method_sequence/: test_method_sequence.py  test_method_sequence_per_type_test_scope.py
src/hamster/extract_statistics/test_setup/: test_setup_details.py  test_teardown_details.py
src/hamster/utils/: output_format.py
(+2 files in other folders)
